// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem component should match snapshot 1`] = `
<View
  testID="wrapper"
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#bcbbc1",
          "flexDirection": "row",
          "padding": 14,
        }
      }
      testID="RNE__LISTITEM__padView"
    />
  </View>
</View>
`;

exports[`ListItem component should render with title and subtitle 1`] = `
<View
  testID="wrapper"
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#bcbbc1",
          "flexDirection": "row",
          "padding": 14,
        }
      }
      testID="RNE__LISTITEM__padView"
    >
      <View
        style={
          [
            {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <Text
          accessibilityRole="text"
          numberOfLines={5}
          style={
            {
              "backgroundColor": "peru",
              "color": "#242424",
              "fontSize": 17,
            }
          }
          testID="listItemTitle"
        >
          title test
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "backgroundColor": "peru",
              "color": "#242424",
              "fontSize": 15,
            }
          }
          testID="listItemTitle"
        >
          title test
        </Text>
      </View>
      <View
        style={
          {
            "paddingLeft": 16,
          }
        }
      />
      <View
        style={
          [
            {
              "alignItems": "flex-end",
              "flex": 0.5,
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "backgroundColor": "transparent",
              "color": "rgba(0, 0, 0, 0.54)",
              "fontSize": 17,
            }
          }
          testID="listItemTitle"
        >
          title
        </Text>
      </View>
    </View>
  </View>
</View>
`;
